<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="myproject_103403508.beanz.listname_103403508.DisplayMember">

    <TextView
        android:text="/"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_textSize"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:id="@+id/tv_member_position" />

    <TextView
        android:text="@string/name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:textSize="@dimen/tv_textSize"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/age"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_age"
        android:textSize="@dimen/tv_textSize"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/sex"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sex"
        android:textSize="@dimen/tv_textSize"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/department"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_department"
        android:textSize="@dimen/tv_textSize"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/first_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_first_member"
            android:layout_weight="1"
            android:onClick="getFirstMember"/>

        <Button
            android:text="@string/go_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_go_to_main"
            android:layout_weight="1"
            android:onClick="goToMain"/>

        <Button
            android:text="@string/last_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_last_member"
            android:layout_weight="1"
            android:onClick="getLastMember"/>
    </LinearLayout>

</LinearLayout>
