<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="myproject_103403508.beanz.listname_103403508.AddNewMember">

    <TextView
        android:text="新增資料"
        android:gravity="center"
        android:textSize="@dimen/tv_textSize"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_add_member_title" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:text=""
            android:id="@+id/et_name" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/age"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_age" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:text=""
            android:id="@+id/et_age" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/sex"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sex" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:text=""
            android:id="@+id/et_sex" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/department"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_department" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:text=""
            android:id="@+id/et_department" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/clear_columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear_columns"
            android:layout_weight="1"
            android:onClick="clearColumns"/>

        <Button
            android:text="@string/go_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_go_to_main"
            android:layout_weight="1"
            android:onClick="goToMain"/>

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm_add_member"
            android:layout_weight="1"
            android:onClick="confirmAddMember"/>
    </LinearLayout>
</LinearLayout>
